# footprint

./: .env.template  .gitignore  .pre-commit-config.yaml  BUGS.md  DIARY.md  IDEAS.md  README.md  RELEASE.md  TOKEN_REFRESH_IMPLEMENTATION.md  claude.md  generate_app_icon.py  progress.md  test_token_refresh.swift
.github/: SELF_HOSTED_RUNNER_SETUP.md
android/: .gitignore  build.gradle.kts  settings.gradle.kts
backend/: .env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/src/: __init__.py  handler.py
backend/src/api/: __init__.py  main.py
backend/src/api/routes/: __init__.py  auth.py  feedback.py  friends.py  import_routes.py  places.py  stats.py  sync.py
backend/src/models/: __init__.py  badges.py  feedback.py  friend.py  geographic.py  google_tokens.py  import_job.py  international_regions.py  sync.py  user.py  visited_place.py  visited_place.py.backup2
backend/src/services/: __init__.py  auth.py  calendar_parser.py  country_extractor.py  dynamodb.py  email_parser.py  google_service.py  import_processor.py  push_notifications.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_import.py  test_international_places.py  test_main.py  test_places.py  test_stats.py  test_sync.py
backend/tests/services/: test_auth.py  test_country_extractor.py  test_dynamodb.py
backend/tests/unit/: test_badges.py  test_geographic.py  test_international_regions.py  test_models.py
data/: README.md  cities_research.md
docs/: api-specification.md  dynamodb-schema.md  offline-sync-architecture.md  research-summary.md
infrastructure/: .env.template  Pulumi.yaml  __main__.py  deploy_lambda.py  requirements.txt
ios/: .swiftlint.yml  AppStore_Connect_Copy.txt  AppStore_Listing_Materials.md  AppStore_Preview_Video_Plan.md  App_Store_Submission_Checklist.md  (+14 more)
(+268 files in other folders)
