[project]
name = "skratch-backend"
version = "0.1.0"
description = "Backend API for Skratch travel tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # AWS SDK and Lambda
    "boto3>=1.34.44",
    # API Framework
    "fastapi>=0.109.1",
    "mangum>=0.17.0",
    # Data Processing
    "pydantic>=2.6.1",
    "orjson>=3.9.13",
    # Geographic Processing
    "geojson>=3.1.0",
    "shapely>=2.0.3",
    "pyproj>=3.6.1",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.2",
    # HTTP Client
    "httpx>=0.26.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4,<8",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "moto>=4.2.14",
    # Code Quality
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    # Security
    "bandit>=1.7.6",
    "safety>=3.0.1",
    # Development
    "pre-commit>=3.6.1",
    # Local Testing
    "localstack>=3.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
